--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <body>
 <h2>Olá bem-vindo ao meu site</h2>
 	<hr> 
-<h1>Uma Frase de Afeto</h1>
+<h1>Um Adendo Interessante</h1>
   <h4>A ideia de que somos os únicos animais racionais tem sido destruída desde os anos 40. 
     A maioria das aves e mamíferos tem algum tipo de raciocínio.</h4>
-    <img src="https://media.tenor.com/yhUkQ85oxDsAAAAC/cachorro-brasil.gif">
+    <img src="https://media.tenor.com/yhUkQ85oxDsAAAAC/cachorro-brasil.gif" alt="Imagem Linda" title="Uma demostração de raciocinio">
         </body>
     </html>
