--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
         <body>
 <h2>Olá bem-vindo ao meu site</h2>
 	<hr> 
+		<!DOCTYPE html>
+<html lang="pt-br">
+    <html>
+        <title>Smach Service</title>
+        <body>
+<h2>Olá bem-vindo ao meu site</h2>
+	<hr> 
+<h1>Um Adendo Interessante</h1>
+<h3>Quem sou eu?</h3>
+<p>Me chamo Gustavo, tenho 18 anos, tenho um grande amor pela criação de conteúdo visual. Sempre procuro aprender mais e aprimorar minhas habilidades.</p>
+</a>
+<a href="#0">
+<h3>O que sei fazer</h3>
+<p>Tenho Conhecimeto Amplo em edição de vídeo e Redes de Telecomunicações</p>
+</a>
+<a href="#0">
+<h3>Qual meu Objetivo Aqui?</h3>
+<p> Quase sempre gosto de ajudar em trabalhos e tirar dúvidas sobre a área de Tecnologia. Sempre fui dedicado e gosto de compartilhar meu conhecimento com os outros.</p>
+  <h4>A ideia de que somos os únicos animais racionais tem sido destruída desde os anos 40. 
+    A maioria das aves e mamíferos tem algum tipo de raciocínio.</h4>
+    <img src="https://media.tenor.com/yhUkQ85oxDsAAAAC/cachorro-brasil.gif" alt="Imagem Linda" title="Uma demostração de raciocinio">
+        </body>
+    </html>
 <h1>Um Adendo Interessante</h1>
   <h4>A ideia de que somos os únicos animais racionais tem sido destruída desde os anos 40. 
     A maioria das aves e mamíferos tem algum tipo de raciocínio.</h4>
