--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h2>Olá bem-vindo ao meu site</h2>
         <hr>
 <h3>Quem sou eu?</h3>
-<p> Me chamo Gustavo Atualmente tenho 18 anos</a>
+<p>Me chamo Gustavo Atualmente tenho 18 anos</a>
 <h3>O que sei fazer</h3>
-<p>Sou Formado em Redes e tenho um amplo conhecimento em edição de videos</p>
+<p>Sou Formado em Redes, e tenho um amplo conhecimento em edição de videos.</p>
 <h3>Qual meu Objetivo Aqui?</h3>
 <p> Quase sempre gosto de ajudar em trabalhos e tirar dúvidas sobre Tecnologia.<hr> 
 </body>
