--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Site</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Meu Primeiro Site</title>
 </head>
-<body>
-    <h2>Olá bem-vindo ao meu site</h2>
-        <hr>
-<h3>Quem sou eu?</h3>
-<p>Me chamo Gustavo Atualmente tenho 18 anos</a>
-<h3>O que sei fazer</h3>
-<p>Sou Formado em Redes, e tenho um amplo conhecimento em edição de videos.</p>
-<h3>Qual meu Objetivo Aqui?</h3>
-<p> Quase sempre gosto de ajudar em trabalhos e tirar dúvidas sobre Tecnologia.<hr> 
-</body>
+  <body>
+   <h2>Olá Bem-Vindo ao meu Portfolío</h2>
+    <hr>
+    <h3>Quem sou eu?</h3>
+    <p>Me chamo Gustavo Atualmente tenho 18 anos</a>
+    <h3>O que sei fazer?</h3>
+   <p>tenho conhecimento em redes, e edição de videos.</p>
+ </body>
 </html>
