--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Meu Primeiro Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smach Service</title>
 </head>
-  <body>
+<body>
    <h2>Olá Bem-Vindo ao meu Portfolío</h2>
     <hr>
     <h3>Quem sou eu?</h3>
     <p>Me chamo Gustavo Atualmente tenho 18 anos</a>
     <h3>O que sei fazer?</h3>
    <p>tenho conhecimento em redes, e edição de videos.</p>
- </body>
+</body>
 </html>
