--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Me chamo Gustavo Atualmente tenho 18 anos</a>
     <h3>O que sei fazer?</h3>
    <p>tenho conhecimento em redes, e edição de videos.</p>
+    <link href="/css/style.css" rel="stylesheet" />
 </body>
 </html>
